--- a/MailSender/MessageSendError.xaml
+++ b/MailSender/MessageSendError.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="MailSender.MessageSendCompletedDlg"
+﻿<Window x:Class="MailSender.MessageSendError"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MailSender"
         mc:Ignorable="d"
-        Title="Результат отправки" 
+        Title="Ошибка при отправке" 
         Height="200" Width="400" 
         ResizeMode="NoResize" 
         ShowInTaskbar="False" 
@@ -14,13 +14,13 @@
         WindowStyle="ToolWindow">
     <DockPanel>
         <!--<DockPanel DockPanel.Dock="Top">
-           <Button Content="X" DockPanel.Dock="Right" IsCancel="True" Padding="5,1"
-                   Click="Button_OnClick"/> 
+            <Button Content="X" DockPanel.Dock="Right" IsCancel="True" Padding="5,1"
+                   Click="Button_OnClick"/>
             <Label Content="{Binding Title, RelativeSource={RelativeSource AncestorType=Window}}"                    
                    Foreground="Black"/>
         </DockPanel>-->
         <Grid>
-            <Label Name="MainLabel" Foreground="Green" FontSize="30"  Margin="20,30,20,63"/> 
+            <Label Name="MainLabel" Foreground="Red" Margin="10,30,10,63"/>
             <Button Content="Ok" HorizontalAlignment="Center" VerticalAlignment="Bottom"
                     Margin="0,0,0,23" Padding="30,1"
                     IsDefault="True" Click="Button_OnClick"/>
